--- a/style/style.css
+++ b/style/style.css
@@ -13,11 +13,15 @@ background-color: #212c3b;
 }
 button {
     text-align: center;  
-    background-color:rgb(33, 133, 190);  
+    background-color:rgb(0, 138, 145);  
     width: 200px;  
     height: 200px;  
     padding-top: 100px;
-    border-radius: 100%;  }
+    border-radius: 100%;}
+    button:hover {
+        background-color:#047e85; 
+        transition-duration: 1s;}
+    
     .center-h {
         display: flex; /* or display:grid */
         justify-content: center;
@@ -148,7 +152,7 @@ cursor: pointer;
 }
 button {
     text-align: center;  
-    background-color:rgb(33, 133, 190);  
+    background-color:rgb(0, 138, 145);  
     width: 200px;  
     height: 200px;  
     padding-top: 100px;
