--- a/style/profile.css
+++ b/style/profile.css
@@ -47,7 +47,8 @@ font-size: 30px;
 font-weight: bold;
 text-decoration: none;
 margin-left: 30px;
-font-family:Montserrat, sans-serif
+font-family:"Montserrat", sans-serif;
+word-spacing: -9px;
 }
 
 .navlinks {
