--- a/style/style.css
+++ b/style/style.css
@@ -251,7 +251,7 @@ cursor: pointer;
     @media (max-width: 415px) {
         .hero {
             position: relative;
-            width: 24rem;
+            width: 100%;
             height: 26rem;
             display: flex;
             justify-content: center;
@@ -262,7 +262,7 @@ cursor: pointer;
             position: absolute;
             top: 0;
             left: 0;
-            width: 480%;
+            width: 100%;
             height: 100%;
             background: url(https://www.beveragedaily.com/var/wrbm_gb_food_pharma/storage/images/_aliases/wrbm_large/publications/food-beverage-nutrition/beveragedaily.com/article/2019/05/31/bottled-water-packaging-uses-59-less-pet-plastic-than-other-beverages/9522518-1-eng-GB/Bottled-water-packaging-uses-59-less-PET-plastic-than-other-beverages.jpg);
             background-repeat: no-repeat;
@@ -304,8 +304,8 @@ cursor: pointer;
         }
         }
         .hero-button:hover {
-            background-color: red;
-            border: 1px solid red;
+            background-color:#181a1b;
+            border: 1px solid #181a1b;
         }
         .navlinks {
             position: fixed;
