--- a/style/style.css
+++ b/style/style.css
@@ -252,7 +252,7 @@ cursor: pointer;
         .hero {
             position: relative;
             width: 100%;
-            height: 26rem;
+            height: 387px ;
             display: flex;
             justify-content: center;
             align-items: center;
