--- a/style/style.css
+++ b/style/style.css
@@ -324,7 +324,8 @@ cursor: pointer;
             outline: none;
             border: none; 
             font-size:1.4rem; 
-            background:none
+            background:none;
+            color: white
         }
         .searchimg{
             height: 50px; 
@@ -346,6 +347,13 @@ cursor: pointer;
         }
         .logo {
             margin-left: 24%;
+            line-height: 90px;
+            font-size: 30px;
+            font-weight: bold;
+            text-decoration: none;
+            margin-left: 30px;
+            font-family: "Montserrat", sans-serif;
+            word-spacing: -9px;
         }
         .navlinks li {
             display: block;
