--- a/style/style.css
+++ b/style/style.css
@@ -347,11 +347,11 @@ cursor: pointer;
         }
         .logo {
             margin-left: 24%;
+            font-weight: bold;
             line-height: 90px;
             font-size: 30px;
-            font-weight: bold;
             text-decoration: none;
-            margin-left: 30px;
+            margin-left: 6.5rem;
             font-family: "Montserrat", sans-serif;
             word-spacing: -9px;
         }
