--- a/style/style.css
+++ b/style/style.css
@@ -124,7 +124,8 @@ font-weight: bold;
 text-decoration: none;
 margin-left: 30px;
 font-family: "Montserrat", sans-serif;
-word-spacing: -9px;
+word-spacing: -8px;
+letter-spacing:-1px;
 }
 
 .navlinks {
@@ -252,7 +253,7 @@ cursor: pointer;
         .hero {
             position: relative;
             width: 100%;
-            height: 387px ;
+            height: 327px ;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -310,9 +311,9 @@ cursor: pointer;
             justify-content: space-evenly;
             background-color: rgb(44, 48, 50); 
             border-radius: 20px; 
-            --darkreader-inline-bgcolor:#393e40; 
-            width: 371px; 
-            margin-left: 11px;
+            --darkreader-inline-bgcolor:#393e40;
+    width: 364px;
+    margin-left: 0px;
         }
         .locationimg{
             height: 23px; 
@@ -346,14 +347,15 @@ cursor: pointer;
             background: #222831;
         }
         .logo {
-            margin-left: 24%;
+            margin-left: 22%;
             font-weight: bold;
             line-height: 90px;
             font-size: 30px;
             text-decoration: none;
             margin-left: 6.5rem;
             font-family: "Montserrat", sans-serif;
-            word-spacing: -9px;
+            word-spacing: -8px;
+            letter-spacing:-1px;
         }
         .navlinks li {
             display: block;
