--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,4 @@
+
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 
 @font-face {
@@ -7,6 +8,9 @@ src: url(/fonts/AstroSpace.ttf);
 body {
     margin: 0;
     padding: 0;
+}
+html{
+    scroll-behavior: smooth
 }
 .hero {
     position: relative;
@@ -339,7 +343,7 @@ cursor: pointer;
             border: 1px solid #181a1b;
         }
         .navlinks {
-            position: fixed;
+            position: absolute;
             width: 100%;
             height: 100vh;
             text-align: center;
@@ -376,6 +380,8 @@ cursor: pointer;
         
         #check:checked ~ .navlinks {
             right: 0;
+            position: relative;
+            z-index: 1;
         }
         
 @media (max-width: 360px) {
