--- a/style/style.css
+++ b/style/style.css
@@ -343,7 +343,7 @@ cursor: pointer;
             border: 1px solid #181a1b;
         }
         .navlinks {
-            position: absolute;
+            position: fixed;
             width: 100%;
             height: 100vh;
             text-align: center;
