--- a/style/style.css
+++ b/style/style.css
@@ -316,6 +316,7 @@ cursor: pointer;
             border-radius: 20px;
         }
         .searchbar{
+            margin-left: 16px;
             display: flex; 
             align-items: center; 
             justify-content: space-evenly;
@@ -352,7 +353,7 @@ cursor: pointer;
         .navlinks {
             position: fixed;
             width: 100%;
-            height: 100vh;
+            height: 100%;
             text-align: center;
             transition: all 0.5s;
             right: -100%;
