--- a/style/style.css
+++ b/style/style.css
@@ -353,7 +353,7 @@ cursor: pointer;
         .navlinks {
             position: fixed;
             width: 100%;
-            height: 100%;
+            height: 11rem;
             text-align: center;
             transition: all 0.5s;
             right: -100%;
