--- a/style/style.css
+++ b/style/style.css
@@ -316,8 +316,8 @@ cursor: pointer;
             margin: 0.625rem;
         }
         .titleline {
-            font-size: 32px;
-        font-weight: 600;
+            font-size: 32.3px;
+        font-weight: bold;
         margin-bottom: 0;
         font-family: "Montserrat", sans-serif;
         margin-left: 11.3%;
@@ -403,6 +403,8 @@ cursor: pointer;
         
         .navlinks li a {
             font-size: 20px;
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 500;
         }
         
         .navlinks li a:hover {
