--- a/style/style.css
+++ b/style/style.css
@@ -261,20 +261,23 @@ cursor: pointer;
     }
     }
     @media (max-width: 415px) {
+        .name{
+            font-size:25px;
+        }
         .boxspacing{
             display: flex; 
             justify-content: space-around;
         }
         .size{
             width: 150px;  
-            border-radius: 20px;
+            border-radius: 15px;
             height: 150px;
         }
         .box{
             height: 150px;
             width: 150px;
         background-color: rgb(255, 255, 255);
-            border-radius: 20px;
+            border-radius: 15px;
             margin-bottom: 3px;
             margin-top:60px
         }
@@ -302,7 +305,7 @@ cursor: pointer;
             left: 0;
             width: 100%;
             height: 100%;
-            background: url(https://www.beveragedaily.com/var/wrbm_gb_food_pharma/storage/images/_aliases/wrbm_large/publications/food-beverage-nutrition/beveragedaily.com/article/2019/05/31/bottled-water-packaging-uses-59-less-pet-plastic-than-other-beverages/9522518-1-eng-GB/Bottled-water-packaging-uses-59-less-PET-plastic-than-other-beverages.jpg);
+            background: url(https://f1.media.brightcove.com/8/694922499001/694922499001_5300180696001_5300150426001-vs.jpg?pubId=694922499001&videoId=5300150426001);
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center center;
@@ -366,7 +369,9 @@ cursor: pointer;
             border: none; 
             font-size:1.4rem; 
             background:none;
-            color: white
+            color: white;
+            font-family: "Montserrat", sans-serif;
+            font-weight: bold;
         }
         .searchimg{
             height: 50px; 
