--- a/style/style.css
+++ b/style/style.css
@@ -270,8 +270,9 @@ cursor: pointer;
         }
         .size{
             width: 150px;  
-            border-radius: 15px;
+            border-radius: 19px;
             height: 150px;
+            box-shadow: 5px 3px 10px grey;
         }
         .box{
             height: 150px;
@@ -279,7 +280,8 @@ cursor: pointer;
         background-color: rgb(255, 255, 255);
             border-radius: 15px;
             margin-bottom: 3px;
-            margin-top:60px
+            margin-top:60px;
+            box-shadow: 5px 3px 10px grey;
         }
         .topbox{
             height: 150px;
