--- a/style/style.css
+++ b/style/style.css
@@ -364,6 +364,7 @@ cursor: pointer;
             color: white;
             text-align: center;
             margin: 0.625rem;
+            left: 0;
         }
         .titleline {
             font-size: 32.3px;
