--- a/style/style.css
+++ b/style/style.css
@@ -328,7 +328,7 @@ cursor: pointer;
   cursor: pointer;
   /* max-width: for small devices */
   margin-bottom: 20px;
-  width: 85rem;
+  width: 951px;
   margin-left: 21px;
 }
 
@@ -541,6 +541,7 @@ cursor: pointer;
             margin-left: 4%;
             font-size:26px;
             font-weight: bold;
+            width: 221px;
         }
         .secondline{
             display: block; 
@@ -548,6 +549,7 @@ cursor: pointer;
             margin-left: 4%;
             font-size:26px;
             font-weight: bold;
+            width: 221px;
         }
         .thirdline{
             display: block; 
@@ -557,6 +559,7 @@ cursor: pointer;
             font-weight: bold;    
             margin-bottom: -18px;
             font-size: 25px;
+            width: 221px;
         }
         .locationimg{
             height: 23px; 
