--- a/style/style.css
+++ b/style/style.css
@@ -11,7 +11,7 @@ src: url(/fonts/AstroSpace.ttf);
     border: 0;
 }
 .firstline{margin-left: 66px;
-    background: linear-gradient(#e66465, #9198e5);
+    background: lnear-gradient(#e66465, #9198e5);
     border-radius: 13px;
     width: 32px;
     font-size: 42px;
@@ -20,7 +20,7 @@ src: url(/fonts/AstroSpace.ttf);
     font-weight: bold;
 }
 .secondline{margin-left: 66px;
-    background: linear-gradient(#e66465, #9198e5);
+    background: lnear-gradient(#e66465, #9198e5);
     border-radius: 13px;
     width: 32px;
     font-size: 42px;
@@ -29,7 +29,7 @@ src: url(/fonts/AstroSpace.ttf);
     font-weight: bold;
 }
 .thirdline{margin-left: 66px;
-    background: linear-gradient(#e66465, #9198e5);
+    background: lnear-gradient(#e66465, #9198e5);
     border-radius: 13px;
     width: 32px;
     font-size: 42px;
@@ -308,55 +308,53 @@ cursor: pointer;
 }
 
 .faq_heading {
-  position: relative;
+position: relative;
 }
 
 .faq_heading::after {
-  content: '';
-  height: 2px;
-  background: #fff;
-  display: inline-block;
-  width: 270px;
+content: '';
+height: 2px;
+background: #fff;
+display: inline-block;
+width: 270px;
 }
-
 .faq_item {
-  border: 1px solid #2c3e50;
-  padding: 1rem;
-  border-radius: 0.5rem;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  cursor: pointer;
-  /* max-width: for small devices */
-  margin-bottom: 20px;
-  width: 951px;
-  margin-left: 21px;
+border: 1px solid #2c3e50;
+width: 85rem;
+padding: 1rem;
+border-radius: 0.5rem;
+margin-top: 1rem;
+margin-bottom: 1rem;
+cursor: pointer;
+margin-bottom: 20px;
+margin-left: 21px;
 }
 
 .faq_title {
-  font-weight: normal;
-  margin-bottom: 7px;
+font-weight: normal;
+margin-bottom: 7px;
 }
 
 .faq_content {
-  font-weight: 100;
-  font-size: 0.95rem;
-  color: #c9c9c9;
+font-weight: 100;
+font-size: 0.95rem;
+color: #c9c9c9;
 }
 
 /* about */
 .about {
-  position: absolute;
-  top: 10%;
-  right: 0%;
-  transform: translate(-50%, -50%);
+    position: absolute;
+    top: 10%;
+right: 0%;
+transform: translate(-50%, -50%);
 }
 
 .about_content {
-  font-size: 24px;
-  color: transparent;
-  -webkit-text-fill-color: transparent;
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: #fff;
+font-size: 24px;
+color: transparent;
+-webkit-text-fill-color: transparent;
+-webkit-text-stroke-width: 1px;
+-webkit-text-stroke-color: #fff;
 }
 
 @media (max-width: 800px) {
@@ -491,7 +489,7 @@ cursor: pointer;
             left: 0;
         }
         .titleline {
-            font-size: 32.3px;
+            font-size: 28.3px;
         font-weight: bold;
         margin-bottom: 0;
         font-family: "Montserrat", sans-serif;
@@ -500,7 +498,9 @@ cursor: pointer;
         display: block;
         margin-top: -36px;
         margin-bottom: 1.9rem;
-        margin-left: 0px;}
+        margin-left: 0px;
+        width: 394px
+        }
         .hero-button {
             background-color: black;
             color: white;
@@ -549,7 +549,7 @@ cursor: pointer;
             margin-left: 4%;
             font-size:26px;
             font-weight: bold;
-            width: 221px;
+            width: 280px;
         }
         .thirdline{
             display: block; 
@@ -559,7 +559,7 @@ cursor: pointer;
             font-weight: bold;    
             margin-bottom: -18px;
             font-size: 25px;
-            width: 221px;
+            width: 294px;
         }
         .locationimg{
             height: 23px; 
@@ -707,9 +707,8 @@ cursor: pointer;
   margin-top: 1rem;
   margin-bottom: 1rem;
   cursor: pointer;
-  /* max-width: for small devices */
   margin-bottom: 20px;
-  width: 339px;
+  width: 300px;
   margin-left: 21px;
 }
 
