--- a/style/style.css
+++ b/style/style.css
@@ -10,6 +10,43 @@ src: url(/fonts/AstroSpace.ttf);
     margin: 0;
     border: 0;
 }
+html{
+    margin: 0;
+    padding: 0;
+}
+.faq_heading {
+    position: relative;
+    }
+    
+    .faq_heading::after {
+    content: '';
+    height: 2px;
+    background: #fff;
+    display: inline-block;
+    width: 270px;
+    }
+    .faq_item {
+    border: 1px solid #2c3e50;
+    width: 85rem;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    cursor: pointer;
+    margin-bottom: 20px;
+    margin-left: 21px;
+    }
+    
+    .faq_title {
+    font-weight: normal;
+    margin-bottom: 7px;
+    }
+    
+    .faq_content {
+    font-weight: 100;
+    font-size: 0.95rem;
+    color: #c9c9c9;
+    }
 .firstline{margin-left: 66px;
     background: lnear-gradient(#e66465, #9198e5);
     border-radius: 13px;
@@ -51,7 +88,6 @@ html{
 }
 .hero {
     position: relative;
-    width: 24rem;
     height: 36rem;
     display: flex;
     justify-content: center;
@@ -62,7 +98,7 @@ html{
     position: absolute;
     top: 0;
     left: 0;
-    width: 90rem;
+    width: 100vw;
     height: 100%;
     background: url(https://f1.media.brightcove.com/8/694922499001/694922499001_5300180696001_5300150426001-vs.jpg?pubId=694922499001&videoId=5300150426001);
     background-repeat: no-repeat;
@@ -76,7 +112,6 @@ html{
     color: white;
     text-align: center;
     margin: 0.625rem;
-    left: 32rem;
     font-size:1rem;
     display:inline-block
 }
@@ -92,14 +127,12 @@ margin-top: -36px;
 margin-bottom: 22px;
 margin-left: 0px;}
 .searchbar{
-margin-left: 16px;
 display: flex; 
 align-items: center; 
-justify-content: space-evenly;
+justify-content: space-around;
 background-color: #181818; 
 border-radius: 20px; 
 --darkreader-inline-bgcolor:#393e40;
-width: 33rem;
 border-radius: 50px;}
 .searcher{
     border: 12px #181818 solid;
