--- a/style/style.css
+++ b/style/style.css
@@ -16,7 +16,7 @@
   }
 .cart{
     width: 32px;
-top: 4.4%;
+top: 3.4%;
 position: fixed;
 right: 7%;
 }
@@ -57,7 +57,7 @@ html {
   font-weight: normal;
   display: grid;
   justify-content: center;
-  
+  outline: none;
 
 }
 
@@ -399,8 +399,7 @@ li a.contact:hover {
   font-weight: normal;
   display: grid;
     justify-content: center;
-   
-
+    outline: none;
 }
 
 .faq_content {
@@ -496,6 +495,12 @@ li a.contact:hover {
   .name {
     font-size: 25px;
   }
+.cart{
+  width: 32px;
+top: 4.2%;
+position: fixed;
+right: 7%;
+}
   .main-nav {
     height: 90px;
     background-color: #0c141c;
@@ -676,7 +681,6 @@ li a.contact:hover {
 .toplogo img {
   width: 218px;
   margin-top: 11px;
-  margin-left: -4%;
 }
 main {
   background-color: #181818;
@@ -793,6 +797,7 @@ main {
   font-weight: normal;
   display: grid;
     justify-content: center;
+    outline: none;
 
 }
 
