--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,10 @@
   margin: 0;
   border: 0;
 }
+html, body{
+  MAX-WIDTH: 100%;
+  overflow: hidden;
+}
 .sticky {
     position: fixed;
     top: 0;
@@ -293,7 +297,7 @@ header {
 .main-nav {
     height: 90px;
     background-color: #0c141c;
-    width: 100%;
+    width: 100vw;
     position: fixed;
     top: 0;
     z-index: 1;
@@ -495,14 +499,14 @@ li a.contact:hover {
   }
 .cart{
   width: 32px;
-top: 4.2%;
+top: 4.5%;
 position: fixed;
-right: 7%;
+left: 84vw;
 }
   .main-nav {
     height: 90px;
     background-color: #0c141c;
-    width: 100%;
+    width: 100vw;
     position: fixed;
     top: 0;
     z-index: 1;
@@ -512,10 +516,10 @@ right: 7%;
     justify-content: space-around;
   }
   .size {
-    width: 150px;
-    border-radius: 19px;
-    height: 150px;
-    box-shadow: 5px 3px 10px grey;
+    height: 32vw;
+width: 33vw;
+  border-radius: 19px;
+  box-shadow: 5px 3px 10px grey;
   }
   .onefifty {
     height: 150px;
@@ -542,12 +546,14 @@ margin-right: 4vw;
 
   .hero {
     position: relative;
-    width: 100%;
-    height: 327px;
+    width: 100vw;
+    height: 90vw;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 15vw;
   }
+  
   .hero::before {
     content: "";
     position: absolute;
